# python-bootstrapping

./: .bootstrapignore  README.md  pyproject.toml  run.py  setup.ps1
bootstrap/: ensure_env.py
src/python_bootstrapping/: cli.py
src/python_bootstrapping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
