[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-bootstrapping"
version = "0.1.0"
description = "Drop-in environment bootstrapper: create .venv, pin Python, and reinstall deps on manifest changes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Greg Gambone" }]
keywords = ["bootstrap", "venv", "dependencies", "devtools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/TwistedNonsense/python-bootstrapping"
Issues = "https://github.com/TwistedNonsense/python-bootstrapping/issues"

[project.scripts]
bootstrap-run = "python_bootstrapping.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["python_bootstrapping"]
include-package-data = true
